style.css
@import url(reset.css);
@import url(config.css);

body{
  background-color: var(--clr-primary-red);
  opacity: .9;
  display: grid;
  place-items: center;
  overflow: hidden;
  font-size: var(--fs-default);
  font-family: var(--ff-regular);
}

.container{
  display: flex;
  flex-direction: column;
  width: 375px;
  padding: 1rem;
  justify-content: space-around;
}

.container__text{
  color: whitesmoke;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.container__text h1{
  padding: 0 3rem;
  font-size: 1.75rem;
  color: white;
}

.container__text h3{
  font-size: 1rem;
  padding: 2rem;
  font-weight: var(--fw-bold);
}

.container__form{
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.form__try{
  background-color: var(--clr-primary-blue);
  color: whitesmoke;
  padding: 1.5rem 1rem;
  text-align: center;
  border-radius: 1rem;
}

.form__try span {
  font-weight: var(--fw-black);
}

form{
  --radius: .6rem
}

.container__form form{
  border-radius: var(--radius);
  background-color: white;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.container__form input{
  border-radius: .3rem;
  outline: none;
  padding: .875rem;
  font-size: .875rem;
  font-weight: var(--fw-black);
  border: 1px solid black;
}

.container__form button{
  padding: .875rem 1rem;
  background-color: var(--clr-primary-green);
  border: none;
  text-transform: uppercase;
  color: white;
  font-weight: var(--fw-bold);
}

.form__terms{
  font-size: .7rem;
  text-align: center;
  padding: 0 2rem;
  color: var(--clr-neutral-gray);
}

.form__terms span{
  color: var(--clr-primary-red);
  font-weight: var(--fw-black);
}

